src/svc-crud-api.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: crud-api
  name: crud-api
spec:
  ports:
  - port: 90
    protocol: TCP
    targetPort: 8080
  selector:
    app: crud-api
status:
  loadBalancer: {}
